# API-HOOK-Detours

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/injectapp/: CMakeLists.txt  main.cpp
app/mainapp/: CMakeLists.txt  main.cpp
app/mainapp/threads/: Logger.h  executor.cpp  executor.h  logger.cpp
app/mainapp/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
app/testapp/: CMakeLists.txt  filewindow.h  httpwindow.cpp  httpwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  regwindow.cpp  regwindow.h  socketwindow.cpp  socketwindow.h
detours/: CMakeLists.txt
mydlls/: CMakeLists.txt  CopyFile.h  MyMsgBox.h  NTtypes.h  NtFile.h  NtHeap.h  NtProcess.h  NtReg.h  log.h  ntdll.h  socket.h  testdll.cpp
